# concerto-conformance

./: .env-example  CONTRIBUTION.md  README.md  cli.js  convertToAST.js  convertToASTpath.js  package.json  runner.config.ts  test-results-instances.txt  tsconfig.json
.github/workflows/: bdd.yml  test.yml
docs/: TESTING_GUIDE.md
semantic/features/: concepts.feature  enums.feature  imports.feature  maps.feature  namespaces.feature  scalars.feature
semantic/features/support/: steps.ts  world.ts
semantic/features/support/Javascript/: steps.ts  world.ts
semantic/features/support/rust/: Cargo.toml
semantic/features/support/rust/cucumber_tests/: Cargo.toml
semantic/features/support/rust/cucumber_tests/src/: main.rs  steps.rs
semantic/specifications/concepts/tests/: concepts.test.js
semantic/specifications/enums/tests/: enums.test.js
semantic/specifications/imports/tests/: imports.test.js
semantic/specifications/maps/tests/: maps.test.js
semantic/specifications/namespaces/tests/: namespaces.test.js
validate/: validateSteps.js
validate/features/: validate.feature
validate/models/class_type/: person.cto  unknown_class.json
validate/models/enums/: enum_property.cto  enum_property.json  invalid_enum.json  valid_enum.json
validate/models/optional/: omitted_optional.json  optional_field.cto  optional_field.json
validate/models/primitives/: all_primitives.cto  all_primitives.json  all_primitives_valid.json  boolean_type_mismatch.json  integer_type_mismatch.json
validate/models/required/: all_present.json  missing_required.json  required_fields.json
(+165 files in other folders)
