[package]
name = "cucumber_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

concerto_core = { path = "../../../../../../" }
cucumber = "0.21"
regex = "1.11.1"

[dev-dependencies]
cucumber = "0.21"
